--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Hastily and amateurishly slapped together by Trung Ngo (lewtds@github). -->
+
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
 
 	<title>October #Beatz Rubik</title>
 	<meta property="og:title" content="October #Beatz Rubik">
@@ -14,15 +16,12 @@
 	<link rel="shortcut icon" href="img/cube-favicon.png" type="image/x-icon">
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,400i,700" rel="stylesheet">
-<!-- 	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
- -->
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
 	<style>
-
 		@font-face {
-		    font-family: "Blockletter";
-		    src: url(lib/Blockletter.woff);
+			font-family: "Blockletter";
+			src: url(lib/Blockletter.woff);
 		}
 
 		html, h1, h2, h3, h4, h5, h6, p, div {
@@ -62,11 +61,8 @@
 			margin-bottom: 1em;
 		}
 
-/*		.hero .present {}
-*/
 		.hero .punch {
 			text-align: center;
-			/*margin-bottom: 2em;*/
 			font-size: 120%;
 		}
 
@@ -78,7 +74,6 @@
 
 		.hero .extra {
 			font-size: 0.8em;
-			/*line-height: 1.4em;*/
 		}
 
 		.hero .extra > * {
@@ -98,28 +93,24 @@
 		}
 
 		footer .media img {
-			/*margin-right: 2em;*/
 			height: 1.5em;
 		}
 
 		.buy-ticket.btn {
-			/*position: absolute;*/
 			bottom: 0;
 			width: 20em;
-			font-size: 1em;
 			margin-left: auto;
 			margin-right: auto;
-			/*left: 50%;*/
-			/*margin-left: -8em;*/
-
+			padding: 0.75em 0 0.75em 0.6em;
+			
 			color: white;
 			background: none;
 			border: 4px solid white;
 			border-radius: 0;
 
+			font-size: 1em;
 			font-weight: 700;
 			letter-spacing: 0.6em;
-			padding: 0.75em 0 0.75em 0.6em;
 			text-align: center;
 		}
 
@@ -127,10 +118,7 @@
 			font-size: 120%;
 			margin-bottom: 2em;
 			text-align: center;
-/*			position: absolute;
-			bottom: 0;
-			right: 0;
-*/		}
+		}
 
 		.punch .beatz {
 			font-weight: 700;
@@ -181,32 +169,7 @@
 			padding-right: 1em;
 			text-align: center; 
 		}
-/*
-		nav {
-			position: fixed;
-			color: white;
-			text-align: center;
-			width: 100%;
-			padding: 1em 0;
-			font-weight: 300;
-			letter-spacing: 0.6em;
-			line-height: 2em;
-			padding-top: 2em;
 
-			background-color: rgba(0, 0, 0, 0.8);
-		}
-
-		nav > div {
-			display: inline-block;
-			padding-right: 1em;
-			padding-left: 1em;
-		}
-
-		nav > div:last-child {
-			border: none;
-		}
-
-*/
 		nav .logo {
 			height: 50px;
 			vertical-align: middle;
@@ -232,7 +195,6 @@
 			font-size: 150%;
 			margin-bottom: 0.7em;
 			margin-top: 1.5em;
-			/*text-decoration: underline;*/
 		}
 
 		footer {
@@ -269,12 +231,6 @@
 				position: relative;
 			}
 
-/*			.hero .extra .media {
-				position: absolute;
-				left: 0;
-				bottom: 0;
-			}*/
-			
 			.hero .present {
 				font-size: 30px;
 			}
@@ -302,10 +258,10 @@
 		}
 
 		a.anchor {
-		    display: block;
-		    position: relative;
-		    top: -100px;
-		    visibility: hidden;
+			display: block;
+			position: relative;
+			top: -100px;
+			visibility: hidden;
 		}
 
 		.sponsors {
@@ -324,7 +280,6 @@
 <body id="content">
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
 		<div class="container">
-			
 			<!-- <a href="" class="navbar-brand"><img src="img/cube.png" alt="" class="logo"></a> -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -383,7 +338,6 @@
 		<a class="anchor" id="story"></a>
 		<div class="row">
 			<div class="col-md-7">
-				
 				<h4>An Annual concert of MFF</h4>
 				<p>The first #Beatz in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year. </p>
 				
@@ -441,7 +395,7 @@
 				  height="400"
 				  frameborder="0" style="border:0"
 				  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAKa5G2dchjOwH2E0crNdCCObuUI3Zk6NM
-				    &q=Gloria,Pieni+Roobertinkatu+12,Helsinki" allowfullscreen>
+					&q=Gloria,Pieni+Roobertinkatu+12,Helsinki" allowfullscreen>
 				</iframe> 
 			</div>
 
@@ -492,7 +446,6 @@
 		 
 		<strong>2. Can I park my car?</strong>
 		<p>Yes, there are a lot of parking places on the street where Gloria Stage is located. But please remember to get your parking place early, because there is free parking on Saturday in Helsinki. Don’t come late as it may take you more time to find a parking place from far away.</p>
-		 
 	</section>
 
 	<hr>
@@ -525,57 +478,60 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
 	<script>
-		// Select all links with hashes
+		// Smooth scrolling to anchors
+		// https://css-tricks.com/snippets/jquery/smooth-scrolling/
 		$('a[href*="#"]')
-		  // Remove links that don't actually link to anything
-		  .not('[href="#"]')
-		  .not('[href="#0"]')
-		  .click(function(event) {
-		    // On-page links
-		    if (
-		      location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') 
-		      && 
-		      location.hostname == this.hostname
-		    ) {
-		      // Figure out element to scroll to
-		      var target = $(this.hash);
-		      target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-		      // Does a scroll target exist?
-		      if (target.length) {
-		        // Only prevent default if animation is actually gonna happen
-		        event.preventDefault();
-		        $('html, body').animate({
-		          scrollTop: target.offset().top
-		        }, 1000, function() {
-		          // Callback after animation
-		          // Must change focus!
-		          var $target = $(target);
-		          $target.focus();
-		          if ($target.is(":focus")) { // Checking if the target was focused
-		            return false;
-		          } else {
-		            $target.attr('tabindex','-1'); // Adding tabindex for elements not focusable
-		            $target.focus(); // Set focus again
-		          };
-		        });
-		      }
-		    }
-		  });
+			// Remove links that don't actually link to anything
+			.not('[href="#"]')
+			.not('[href="#0"]')
+			.click(function(event) {
+			// On-page links
+			if (
+				location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') 
+				&& 
+				location.hostname == this.hostname
+			) {
+				// Figure out element to scroll to
+				var target = $(this.hash);
+				target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+				// Does a scroll target exist?
+				if (target.length) {
+				// Only prevent default if animation is actually gonna happen
+				event.preventDefault();
+				$('html, body').animate({
+					scrollTop: target.offset().top
+				}, 1000, function() {
+					// Callback after animation
+					// Must change focus!
+					var $target = $(target);
+					$target.focus();
+					if ($target.is(":focus")) { // Checking if the target was focused
+					return false;
+					} else {
+					$target.attr('tabindex','-1'); // Adding tabindex for elements not focusable
+					$target.focus(); // Set focus again
+					};
+				});
+				}
+			}
+		});
 
+		// Close mobile navbar item when tapped on.
+		// https://stackoverflow.com/a/42401686
 		$('.navbar-nav>li>a').on('click', function(){
-		    $('.navbar-collapse').collapse('hide');
+			$('.navbar-collapse').collapse('hide');
 		});
 	</script>
 
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	// The necessary evil...
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-105910681-1', 'auto');
-	  ga('send', 'pageview');
-
+	ga('create', 'UA-105910681-1', 'auto');
+	ga('send', 'pageview');
 	</script>
 </body>
 </html>
