--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -80,11 +80,11 @@
 			margin-bottom: 1em;
 		}
 
-		footer {
+		.page-footer {
 			text-align: center;
 		}
 
-		footer .media {
+		.page-footer .media {
 			width: 80%;
 			margin-left: auto;
 			margin-right: auto;
@@ -92,7 +92,7 @@
 			justify-content: space-around;
 		}
 
-		footer .media img {
+		.page-footer .media img {
 			height: 1.5em;
 		}
 
@@ -197,7 +197,7 @@
 			margin-top: 1.5em;
 		}
 
-		footer {
+		.page-footer {
 			background-color: #101010;
 			color: white;
 			padding-top: 1em;
@@ -339,11 +339,15 @@
 		<div class="row">
 			<div class="col-md-7">
 				<h4>An Annual concert of MFF</h4>
-				<p>The first #Beatz in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year. </p>
+				<p>The first <strong>#Beatz</strong> in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year. </p>
 				
-				<p>#Beatz14 has received tons of love and encouragement from audience; therefore, we decided to turn it into an annual concert where people could freely showcase their talent, follow passion and develop professional skills. </p>
+				<p><strong>#Beatz14</strong> has received tons of love and encouragement from the audience; therefore, we decided to turn it into an annual concert where people can freely showcase their talent, follow passion and develop professional skills. </p>
 				
-				<p>“I was amazed by how creative the show was. While I fell in love with romantic part in the beginning, I was thrilled by the later part, when everyone stood up, danced and screamed with excitement, especially with the dance performance and the rock band in the end. Everyone was on fire!!!” - Thai Nguyen, an audience of October #Beatz15</p>
+				<blockquote class="blockquote text-center">
+				<p class="mb-0">“I was amazed by how creative the show was. While I fell in love with romantic part in the beginning, I was thrilled by the later part, when everyone stood up, danced and screamed with excitement, especially with the dance performance and the rock band in the end. Everyone was on fire!!!”</p>
+
+				<footer class="blockquote-footer"><cite title="Source Title">Thai Nguyen</cite>, an audience of October #Beatz15</footer>
+				</blockquote>
 			</div>
 
 			<div class="col-md-5">
@@ -362,14 +366,11 @@
 			</div>
 			<div class="col-md-7">
 				<h3>Rubik</h3>
-				<p>
-				Things are about to change when the sun rises.</p>
+				<p>Your journey to the fourth edition of <strong>October #Beatz</strong> is accompanied by a magical rubik's cube.</p>
 
-				<p>Audience will experience many up and down feeling in different period of life. By remixing and smashing up, we would like to blow a new wind to the old songs, make them divergent, but still familiar. </p>
+				<p>As each face of the cube unfolds, its colour will lead you to different artists with their unique traits. Six sessions bring out different musical tastes and feelings, yet they are all interdependent, making up the musical rubik's cube of <strong>October #Beatz 2017</strong>. It will be fully unlocked this <strong>7.10.2017</strong> at <strong>Gloria Stage</strong>.</p>
 
-				<p>#Beatz16 has been prepared more elaborately and professionally in order to present the best concert ever.</p>
-
-				<p>It is not only a performance but also our passion and vision.</p>
+				<p><strong>Be there or be square!</strong></p>
 			</div>
 		</div>
 	</section>
@@ -416,35 +417,32 @@
 
 		<h4>Purchasing tickets</h4>
 
-		<strong>1. How can I order?</strong>
-		<p>You can order ticket directly from the website’s front page. Or you may order it on Holvi through the link: ……….</p>
+		<strong>How can I order?</strong>
+		<p>You can order ticket directly from the website’s front page or through our shop on TicketTailor at <a href="http://buytickets.at/musicforfriends1/112715">http://buytickets.at/musicforfriends1/112715</a>. There are a limited number of tickets sold at door as well but we can't guarantee availability.</p>
 		 
-		<strong>2. How can I pay?</strong>
-		<p>After ordering your tickets, you will see the payment method in the purchasing section of ordering tickets. Please notice that you may be charged an extra 10% if the tickets are ordered on Holvi.</p>
-		 
-		<strong>3. How can I get the ticket(s)?</strong>
+		<strong>How can I get the ticket(s)?</strong>
 		<p>After the ticket payment is confirmed, you will get the e-ticket(s) through your email. If there are any missing tickets, please kindly contact MFF to make sure you get the ticket(s) you have purchased.</p>
 		 
 		<h4>Location and time</h4>
 		
-		<strong>1. When is the concert?</strong>
+		<strong>When is the concert?</strong>
 		<p>The concert will be set at 19:00 on Saturday, October 7th, 2017.</p>
 		 
-		<strong>2. Where is it?</strong>
-		<p>Oct #Beatz 2017 will be held at Gloria Stages, Pieni Roobertinkatu 12, 00120 Helsinki</p>
+		<strong>Where is it?</strong>
+		<p>October #Beatz 2017 will be held at Gloria Stages, Pieni Roobertinkatu 12, 00120 Helsinki.</p>
 		
-		<strong>3. Can I come late?</strong>
-		<p>Hope that you can catch up in time to enjoy the full show. Remember, we will have a lucky draw for the audience, so please don't miss it.</p>
-		 
+		<strong>Can I come late?</strong>
+		<p>We hope that you can catch up in time to enjoy the full show. Remember, we will have a lucky draw for the audience. We don't want you to miss it!</p>
+
 		<h4>Transportation</h4>
-		<strong>1. How can I get there?</strong>
+		<strong>How can I get there?</strong>
 		<p>There are many ways to get there.</p>
 
 		<p>By public transportation: it takes around 5 mins from Lasipalatsi tram stop (which is 3-min walk from Rautatieasema –Central Station)  for tram 10 which will pass the Kolmikulma tram stop. Then you can take 1 min walk to Gloria Stage within 150m.</p>
 		
-		<p>By walking: It is about 900m from Rautatieasema – Central Station to Gloria Stage so it will be a 12-min walk.</p>
+		<p>On foot: It is about 900m from Rautatieasema – Central Station to Gloria Stage so it will be a 12-min walk.</p>
 		 
-		<strong>2. Can I park my car?</strong>
+		<strong>Can I park my car?</strong>
 		<p>Yes, there are a lot of parking places on the street where Gloria Stage is located. But please remember to get your parking place early, because there is free parking on Saturday in Helsinki. Don’t come late as it may take you more time to find a parking place from far away.</p>
 	</section>
 
@@ -462,7 +460,7 @@
 		</div>
 	</section>
 
-	<footer>
+	<footer class="page-footer">
 		<div class="container">
 			<!-- <p><a href="mailto:contact@octoberbeatz.com">contact@octoberbeatz.com</a></p> -->
 			<div class="media">
