--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
 
 	<title>October #Beatz Rubik</title>
 	<meta property="og:title" content="October #Beatz Rubik">
+	<meta property="og:type" content="website">
 	<meta property="og:description" content="October #Beatz is an annual concert of MFF. The first #Beatz in 2014 was held with the purpose of creating a memorable milestone in the 2 years' development of Music For Friends Helsinki. It represents the enthusiasm and hard work of all team members throughout the year." >
 	<meta property="og:url" content="http://octoberbeatz.com/">
-	<meta property="og:image" content="http://octoberbeatz.com/dev/img/exploding-cube.jpg" >
+	<meta property="og:image" content="http://octoberbeatz.comi/img/exploding-cube.jpg" >
 
 
 	<link rel="shortcut icon" href="img/cube-favicon.png" type="image/x-icon">
