Change title and shorter description

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
 
-	<title>October #Beatz Rubik</title>
-	<meta property="og:title" content="October #Beatz Rubik">
+	<title>October #Beatz 2017 - Rubik</title>
+	<meta property="og:title" content="October #Beatz 2017 - Rubik">
 	<meta property="og:type" content="website">
-	<meta property="og:description" content="October #Beatz is an annual concert of MFF. The first #Beatz in 2014 was held with the purpose of creating a memorable milestone in the 2 years' development of Music For Friends Helsinki. It represents the enthusiasm and hard work of all team members throughout the year." >
+	<meta property="og:description" content="THE BIGGEST annual event of Music For Friends Helsinki is here again. Don't bury your youth here now. Keep crashing the party!">
 	<meta property="og:url" content="http://octoberbeatz.com/">
 	<meta property="og:image" content="http://octoberbeatz.com/img/banner.jpg" >
 
