Fix alignment on desktop

--- a/public/index.html
+++ b/public/index.html
@@ -176,9 +176,19 @@
 			vertical-align: middle;
 		}
 
-		.story, .about-rubik {
+		.about-rubik {
 			padding-top: 4em;
 			padding-bottom: 4em;
+		}
+
+		.story {
+			padding-top: 4em;
+			padding-bottom: 2em;
+		}
+
+		.story blockquote {
+			margin-top: 3em;
+			margin-bottom: 3em;
 		}
 
 		.faq {
@@ -246,6 +256,20 @@
 
 			.transition-featured {
 				font-size: 40px;
+			}
+
+			.tt-widget .tt-widget-inline iframe {
+				max-width: none;
+				margin-right: -20px;
+			}
+
+			.buy-ticket .col-md-5 {
+				padding-right: 0;
+			}
+
+			.navbar-dark .navbar-nav li:last-child > a.nav-link {
+				padding-right: 0;
+				margin-right: -0.6em;
 			}
 		}
 
