--- a/public/index.html
+++ b/public/index.html
@@ -364,19 +364,19 @@
 		<div class="row">
 			<div class="col-md-7">
 				<h4>An Annual concert of MFF</h4>
-				<p>The first <strong>#Beatz</strong> in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year. </p>
-				
+				<p>The first <strong>#Beatz</strong> in 2014 was held with the purpose of creating a memorable milestone celebrating the first 2 years of Music For Friends. It represented the enthusiasm and hard work of all team members throughout the year. </p>
+
 				<p><strong>#Beatz14</strong> has received tons of love and encouragement from the audience; therefore, we decided to turn it into an annual concert where people can freely showcase their talent, follow passion and develop professional skills. </p>
 				
 				<blockquote class="blockquote text-center">
 				<p class="mb-0">“I was amazed by how creative the show was. While I fell in love with romantic part in the beginning, I was thrilled by the later part, when everyone stood up, danced and screamed with excitement, especially with the dance performance and the rock band in the end. Everyone was on fire!!!”</p>
 
-				<footer class="blockquote-footer"><cite title="Source Title">Thai Nguyen</cite>, an audience of October #Beatz15</footer>
+				<footer class="blockquote-footer"><cite title="Source Title">Thai Nguyen</cite>, an audience member of October #Beatz15</footer>
 				</blockquote>
 			</div>
 
 			<div class="col-md-5">
-				<img src="img/Story_NewDawn_-min.png" alt="" class="img-fluid">
+				<img src="img/Story_NewDawn_-min.png" alt="" style="width: 100%;">
 			</div>
 		</div>
 	</section>
