--- a/public/index.html
+++ b/public/index.html
@@ -453,7 +453,11 @@
 		<p>After the ticket payment is confirmed, you will get the e-ticket(s) through your email. If there are any missing tickets, please kindly contact MFF to make sure you get the ticket(s) you have purchased.</p>
 
 		<strong>What types of tickets are available?</strong> 
-		<p>If you buy tickets before the show, there are two types of tickets: GA (general admission) and VIP. GA tickets grant you access to the lower deck without seats. With VIP tickets you have access to the upper deck reserved for the VIP area with seats. Both ticket types include the after party. If you buy tickets at the entrance, GA ticket is the only available type, and is sold at VIP’s price. The tickets’ prices do not include food and drink. Access to entrance is granted for 1 person/ticket from 7pm.</p>
+		<p>If you buy tickets BEFORE the show, there are two types of tickets: GA (general admission) and VIP. GA tickets grant you access to the lower deck without seats. With VIP tickets you have access to the upper deck reserved for the VIP area with seats.</p>
+
+		<p>If you buy tickets AT DOOR, GA ticket is the only available type, and is sold at VIP’s price.</p>
+
+		<p>All ticket types include access to the after-party. The tickets’ prices do not include food and drink. Entrance is granted for 1 person/ticket from 7pm.</p>
 
 		<strong>I’m bringing friends with me. You guys have anything in store for me?</strong>
 		<p>If you are bringing friends, we have a special offer for you. With any purchase of 5 tickets (5 tickets must be of the same type), you will get an extra 1 ticket of the same type.</p>
