--- a/public/index.html
+++ b/public/index.html
@@ -446,21 +446,24 @@
 
 		<h4>Purchasing tickets</h4>
 
-		<strong>How can I order?</strong>
+		<strong>How do I get my ticket?</strong>
 		<p>You can order ticket directly from the website’s front page or through our shop on TicketTailor at <a href="http://buytickets.at/musicforfriends1/112715">http://buytickets.at/musicforfriends1/112715</a>. There are a limited number of tickets sold at door as well but we can't guarantee availability.</p>
-		 
-		<strong>How can I get the ticket(s)?</strong>
-		<p>After the ticket payment is confirmed, you will get the e-ticket(s) through your email. If there are any missing tickets, please kindly contact MFF to make sure you get the ticket(s) you have purchased.</p>
 
-		<strong>What types of tickets are available?</strong> 
-		<p>If you buy tickets BEFORE the show, there are two types of tickets: GA (general admission) and VIP. GA tickets grant you access to the lower deck without seats. With VIP tickets you have access to the upper deck reserved for the VIP area with seats.</p>
+		<p>A TICKET includes:</p>
 
-		<p>If you buy tickets AT DOOR, GA ticket is the only available type, and is sold at VIP’s price.</p>
+		<ul>
+			<li>Access to the whole event with seats in Gloria</li>
+			<li>Invitation to #OctoberBeatz17's After-party</li>
+		</ul>
 
-		<p>All ticket types include access to the after-party. The tickets’ prices do not include food and drink. Entrance is granted for 1 person/ticket from 7pm.</p>
+		<p>
+			<em>* Drinks and food are not included in the ticket.</em> <br>
+			<em>* Age requirement: 18+</em>
+		</p>
 
-		<strong>I’m bringing friends with me. You guys have anything in store for me?</strong>
-		<p>If you are bringing friends, we have a special offer for you. With any purchase of 5 tickets (5 tickets must be of the same type), you will get an extra 1 ticket of the same type.</p>
+		<p>If you want to buy tickets AT DOOR, the price is a little higher at 12EUR.</p>
+
+		<p>What’s more, we offer DISCOUNT! Events are much more fun with your besties right? Grasp the chance #ASAP to get our BEST DEAL (buy 5 tickets and get 1 free)!</p>
 
 		<h4>Location and time</h4>
 		
