--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 		::-moz-selection { background: #8A7893; }
 
 		.container {
-			max-width: 1280px;
+			/*max-width: 1280px;*/
 			margin: 0 auto;
 		}
 
