Update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,15 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
-
+	
 	<title>October #Beatz 2017 - Rubik</title>
 	<meta property="og:title" content="October #Beatz 2017 - Rubik">
+
 	<meta property="og:type" content="website">
+
+	<meta name="description" content="THE BIGGEST annual event of Music For Friends Helsinki is here again. Don't bury your youth here now. Keep crashing the party!">
 	<meta property="og:description" content="THE BIGGEST annual event of Music For Friends Helsinki is here again. Don't bury your youth here now. Keep crashing the party!">
+	
 	<meta property="og:url" content="http://octoberbeatz.com/">
 	<meta property="og:image" content="http://octoberbeatz.com/img/banner.jpg" >
 
