Update Google Structured Data

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,13 @@
 	    "url": "https://www.tickettailor.com/checkout/view-event/id/112715/chk/8757",
 	    "price": "10",
 	    "priceCurrency": "EUR",
-	    "availability": "http://schema.org/InStock"
+	    "availability": "http://schema.org/InStock",
+	    "validFrom": "2017-09-08",
+	    "validThrough": "2017-10-06"
+	  },
+	  "performer": {
+	    "@type": "PerformingGroup",
+	    "name": "Members of Music For Friends"
 	  }
 	}
 	</script>
