--- a/public/index.html
+++ b/public/index.html
@@ -514,7 +514,7 @@
 		<p>A TICKET includes:</p>
 
 		<ul>
-			<li>Access to the whole event with seats in Gloria</li>
+			<li>Access to the whole event in Gloria</li>
 			<li>Invitation to #OctoberBeatz17's After-party</li>
 		</ul>
 
