Add Vndap's logo

--- a/public/index.html
+++ b/public/index.html
@@ -558,9 +558,10 @@
 		</p>
 
 		<div>
-			<a href="https://www.facebook.com/musicforfriendshelsinki"><img src="img/logo-mff.jpg" alt=""></a>
-			<a href="http://harju.munstadi.fi/"><img src="img/logo-harju.jpg" alt=""></a>
-			<a href="http://gloria.munstadi.fi"><img src="img/logo-gloria.jpg" alt=""></a>
+			<a href="https://www.facebook.com/musicforfriendshelsinki"><img src="img/logo-mff.jpg" alt="Music For Friends"></a>
+			<a href="http://harju.munstadi.fi/"><img src="img/logo-harju.jpg" alt="Harju"></a>
+			<a href="http://gloria.munstadi.fi"><img src="img/logo-gloria.jpg" alt="Gloria"></a>
+			<a href="https://www.vndap.com/"><img src="img/logo-vndap.jpg" alt="Vndap"></a>
 		</div>
 	</section>
 
